--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
         <link rel="icon" type="image/png" href="{{url_for('static', filename='favicon-32x32.png')}}" sizes="32x32">
         <link rel="icon" type="image/png" href="{{url_for('static', filename='favicon-96x96.png')}}" sizes="96x96">
         <script defer src="{{url_for('static', filename='js/jquery-3.6.0.js')}}"></script>
+        <script defer src="{{url_for('static', filename='js/tinycolor.js')}}"></script>
         {% block header %}{% endblock %}
     </head>
     <body>
