--- a/templates/index.html
+++ b/templates/index.html
@@ -7,12 +7,11 @@
 
 {% block content %}
 {% for file in files %}
-
-    <div class="card{{' ' + file.type if file.type in ('audio', 'video')}}" style="flex-direction: column;">
+    <div class="card{{' ' + file.type if file.type in settings.filetypes.keys()}}" style="flex-direction: column;">
         {{file.filename}}
         <div style="width: 100%; margin: 1vw; display: flex; flex-direction: row; justify-content: space-around;">
-            <a href="{{url_for('media', filename=file)}}?as_attachment=false" class="btn">View</a>
-            <a href="{{url_for('media', filename=file)}}?as_attachment=true" class="btn">Download</a>
+            <a href="{{url_for('media', filename=file.file)}}?as_attachment=false" class="btn">View</a>
+            <a href="{{url_for('media', filename=file.file)}}?as_attachment=true" class="btn">Download</a>
         </div>
     </div>
 {% endfor %}
