--- a/static/css/index.css
+++ b/static/css/index.css
@@ -12,7 +12,7 @@
     flex-direction: row;
     align-items: stretch;
     align-content: flex-start;
-    justify-content: flex-start;
+    justify-content: center;
 }
 
 .card.audio {
