--- a/static/css/index.css
+++ b/static/css/index.css
@@ -8,6 +8,21 @@
 #site-body {
     width: 100vw;
     display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: flex-start;
+}
+
+#media-header {
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+#media {
+    width: 100vw;
+    display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     align-items: stretch;
