--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,8 @@
 
 {% block content %}
 <div id="media-header">
+    <label for="new-file" class="word-btn">Upload media</label>
+    <input type="file" id="new-file" name="new-file" style="display: none;">
     <input type="text" id="search" placeholder="search">
 </div>
 <div id="media"></div>
