multiple files download at once

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
 
 {% block content %}
 <div id="media-header">
+    <a id='download-all'  style="display: none"><button class="word-btn">Donwload All</button></a>
     <label for="new-file" class="word-btn">Upload media</label>
     <input type="file" id="new-file" name="new-file" style="display: none;">
     <input type="text" id="search" placeholder="search">
