--- a/static/css/global.css
+++ b/static/css/global.css
@@ -52,6 +52,7 @@ body {
 }
 
 .word-btn {
+    background-color: var(--prim);
     font-family: 'Roboto', sans-serif;
     font-weight: 100;
     text-decoration: none;
@@ -62,6 +63,8 @@ body {
     border-radius: 1vmin;
     margin: 1vmin;
     padding: 0.5vmin;
+    border: 0px solid black;
+    transition-duration: 0.1s;
 }
 
 .word-btn:hover {
@@ -100,7 +103,7 @@ body {
     align-items: center;
     overflow-wrap: anywhere;
     justify-content: space-between;
-    width: 12vw;
+    width: 20ch;
     margin: 1vw;
     padding: 1vw;
 }
@@ -112,8 +115,8 @@ body {
     border-radius: 0.5vw;
     -webkit-box-shadow: 0 2.5px 5px 0 var(--prim-shadow), 0 2.5px 0 0 var(--prim-shadow);
     box-shadow: 0 2.5px 5px 0 var(--prim-shadow), 0 2.5px 0 0 var(--prim-shadow);
-    padding: 0.5vw;
-    margin-top: 0.5vw;
+    padding: 0.25vw;
+    margin-top: 0.25vw;
     transition-duration: 0.1s;
 }
 
