--- a/static/css/index.css
+++ b/static/css/index.css
@@ -20,6 +20,13 @@
     justify-content: flex-end;
 }
 
+#selection-header {
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
 #media {
     width: 100vw;
     display: flex;
@@ -48,4 +55,59 @@
 .card.text {
     -webkit-box-shadow: 0 2.5px 0 0 var(--text-color), 0 2.5px 10px 0 var(--text-color);
     box-shadow: 0 2.5px 0 0 var(--text-color), 0 2.5px 10px 0 var(--text-color);
+}
+
+input[type="checkbox"] {
+    display: none;
+}
+
+input[type="checkbox"] + label {
+    font-family: 'Roboto', sans-serif;
+    font-size: 2vmin;
+    text-decoration: none;
+    border-radius: 0.5vw;
+    -webkit-box-shadow: 0 2.5px 5px 0 var(--prim-shadow), 0 2.5px 0 0 var(--prim-shadow);
+    box-shadow: 0 2.5px 5px 0 var(--prim-shadow), 0 2.5px 0 0 var(--prim-shadow);
+    padding: 0.25vw;
+    margin-top: 0.25vw;
+    width: 2ch;
+    height: 2ch;
+    transition-duration: 0.1s;
+    outline: 0px solid black;
+}
+
+input[type="checkbox"] + label:hover {
+    transform: translateY(1px);
+}
+
+input[type="checkbox"]:checked + label {
+    transform: translateY(4px);
+    -webkit-box-shadow:0 0 0 0 var(--prim-shadow);
+    box-shadow:0 0 0 0 var(--prim-shadow);
+    outline: 1px solid black;
+    background-color: white;
+}
+
+input[type="checkbox"]:checked + label.audio {
+    background-color: var(--audio-color);
+    -webkit-box-shadow:0 0 10px 0 var(--audio-color);
+    box-shadow:0 0 10px 0 var(--audio-color);
+}
+
+input[type="checkbox"]:checked + label.video {
+    background-color: var(--video-color);
+    -webkit-box-shadow:0 0 10px 0 var(--video-color);
+    box-shadow:0 0 10px 0 var(--video-color);
+}
+
+input[type="checkbox"]:checked + label.image {
+    background-color: var(--image-color);
+    -webkit-box-shadow:0 0 10px 0 var(--image-color);
+    box-shadow:0 0 10px 0 var(--image-color);
+}
+
+input[type="checkbox"]:checked + label.text {
+    background-color: var(--text-color);
+    -webkit-box-shadow:0 0 10px 0 var(--text-color);
+    box-shadow:0 0 10px 0 var(--text-color);
 }
